--- a/style.css
+++ b/style.css
@@ -109,3 +109,7 @@ p{
 .content-3 .img{
     filter: grayscale(100%);
 }
+.content:hover{
+    transform: scale(1.05);
+    transition-duration: 0.5s;
+}
