--- a/style.css
+++ b/style.css
@@ -108,15 +108,23 @@ p{
 .content-1:hover,
 .content-2:hover{
     transform: scale(1.05);
-    transition-duration: 0.5s;
-    animation-name: border;
-    animation-duration: 0.25s;
-    animation-fill-mode:forwards;
+    transition-duration: 0.2s;
 }
-@keyframes border{
-    to{border:solid 7px #ff5461;}
-}
-.giveMeYouMoney:hover{
+
+.giveMeYouMoney:active{
     color:#ff5461;
     border-bottom: 1px dashed #ff5461;
+}
+@keyframes border-color{
+    0%{
+        border: 5px solid #ff5461;
+    }
+    100%{
+        border: 5px solid #ff5461;
+    }
+}
+.content:active{
+    animation-name: border-color;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
 }
