--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ a{
     font-size:50px;
 }
 .content-3{
-    border:solid 5px #6f6b6e;
+    border:solid 5px rgba(111, 107, 110, 0.34);;
     color: rgba(0, 0, 0, 0.51);
 }
 .content-3 .name{
@@ -143,9 +143,29 @@ p{
     border-radius: 50px;
     margin-top: -110px;
     margin-left: 210px;
-    line-height: 50px;
     text-align: center;
+}
+.text-in-round{
+    display: inline-block;
+    vertical-align: middle;
     font-size: 40px;
-    font-weight: bold;
-
+    line-height: 30px;
+    font-weight: 900;
+    color: rgb(255, 255, 255);
+}
+.round:before{
+    content: "";
+    display: inline-block;
+    min-height: inherit;
+    height: 100%;
+    vertical-align: middle;
+}
+.content-1:active .round{
+    background: #ff5461;
+}
+.content-2:active .round{
+    background: #ff5461;
+}
+.content-3 .round{
+    background: rgba(111, 107, 110, 0.34);
 }
