--- a/style.css
+++ b/style.css
@@ -89,18 +89,7 @@ a{
 p{
     margin-left: 30px;
 }
-.content::after{
-    content:"";
-    position:absolute;
 
-    top:138px;
-    left:130px;
-    background-color: rgba(255, 255, 255, 0);
-    width: 0;
-    height: 0;
-    border-top: 60px solid transparent;
-    border-right: 60px solid transparent;
-}
 .img{
     background-image: url("img/Photo.png");
     background-position: -40px 40px;
@@ -159,4 +148,8 @@ p{
 }
 .content-3 .round{
     background: rgba(111, 107, 110, 0.34);
+}
+/* this is костыль */
+.third_eat{
+    margin-top: 20px;
 }
