--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ a{
     justify-content: center;
     align-items: stretch;
     flex-wrap:wrap;
+    margin: auto;
 }
 .question{
     color:white;
@@ -50,10 +51,10 @@ a{
     color: #1698D9;
 }
 .eat{
-    margin:0 auto;
+    margin:0 70px 30px 70px;
     justify-content:flex-start;
 }
-.first_word{
+.first-word{
     size: 10px;
     margin-top: 0;
     margin-bottom: 0;
@@ -61,15 +62,12 @@ a{
 .page-first-word{
     color: white;
     text-align: center;
-    font-size:36px;
-    font-family: "Exo 2.0-Thin", serif;
+    font-size:50px;
+    font-family: "Exo 2.0", serif;
+    margin-bottom: 50px;
 }
-.content-3{
-    border:solid 5px #B3B3B3;
-    color: rgba(0, 0, 0, 0.51);
-    opacity: 0.5;
-}
-.content-3 .name{
+
+.content-disabled .name{
     color: rgba(0, 0, 0, 0.42);
 }
 .third_eat .question{
@@ -87,17 +85,18 @@ a{
     margin-top: 10px;
     color: #666666;
 }
-.portions{
-    margin-top: 10px;
-}
+
 p{
     margin-left: 30px;
 }
 
-.content-1:hover,
-.content-2:hover{
+.content:hover{
     transform: scale(1.05);
     transition-duration: 0.2s;
+}
+
+.content-disabled:hover{
+    transform: scale(1);
 }
 
 .giveMeYouMoney:active{
@@ -105,10 +104,10 @@ p{
     border-bottom: 1px dashed #D91667;
 }
 
-.content-1:active,
-.content-2:active{
+.content:active{
     border: 5px solid #D91667;
 }
+
 .round{
     width: 100px;
     height: 100px;
@@ -133,13 +132,12 @@ p{
     height: 100%;
     vertical-align: middle;
 }
-.content-1:active .round{
+.content:active .round{
     background: #D91667;
 }
-.content-2:active .round{
-    background: #D91667;
-}
-.content-3 .round{
+
+.content-disabled .round,
+.content-disabled:active .round{
     background: #808080;
 }
 .text-content{
@@ -152,4 +150,10 @@ p{
     border-top-right-radius: 15px;
     width: 330px;
     height: 519px;
+}
+.content-disabled,
+.content-disabled:active{
+    border:solid 5px #B3B3B3;
+    color: rgba(0, 0, 0, 0.51);
+    opacity: 0.5;
 }
