--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ a{
     font-size:50px;
     font-weight: 900;
     margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
 }
 
 .allContent{
@@ -65,17 +65,19 @@ a{
     font-size:50px;
     font-family: "Exo 2.0", serif;
     margin-bottom: 50px;
+    font-weight: bolder;
 }
 
 .content-disabled .name{
     color: rgba(0, 0, 0, 0.42);
+    margin-bottom: 0px;
 }
 .third_eat .question{
     color: rgb(255, 236, 68);
 }
 
 .food{
-    margin-top: -40px;
+    margin-top: 0;
     font-weight: bold;
     margin-left: 30px;
     font-family: Trebuchet MS, serif;
@@ -139,7 +141,9 @@ p{
 .content-disabled .round,
 .content-disabled:active .round{
     background: #808080;
+    margin-top: 155px;
 }
+
 .text-content{
     padding:15px 30px 40px 10px;
 }
