--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     background-image: url("img/Pattern.png");
     font-family: Trebuchet MS, serif;
+    margin:0;
 }
 a{
     color:black;
