--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ a{
     color: #666666;
 }
 
-p{
+.name,.first-word,.food,.portions,.question{
     margin-left: 30px;
 }
 
@@ -201,15 +201,42 @@ p{
     margin: 0;
 
 }
+
 .menu-content:hover{
     background-color: rgb(22, 186, 255);
 }
 
 .menu-content p{
-    vertical-align: center;
     line-height: 44px;
+    display: block;
+    text-align: center;
 }
 
 .menu-content:active{
+    background-color: #D91667;
+}
+
+.menu-text{
+    position: relative;
+    display: block;
+}
+
+.menu-text::before,
+.menu-text::after {
+    position: absolute;
+    content:'';
+    height: 3px;
+    width: 100%;
+    background-color: #D91667;
+    left:0;
+
+}
+
+.menu-text::after{
+    position: absolute;
+    content:'';
+    height: 3px;
+    width: 100%;
+    bottom:0;
     background-color: #D91667;
 }
